--- a/www-ng/src/app/views/monthly-report/monthly-report.component.html
+++ b/www-ng/src/app/views/monthly-report/monthly-report.component.html
@@ -33,6 +33,9 @@
             [rows]='data$ | async'>
           </ngx-datatable>
         </div>
+        <div>
+          <button class="button btn-primary" (click)="exportAsCSV()">Export</button>
+        </div>
       </div>
     </div>
   </div>
