adjust to new data

--- a/www-ng/src/app/views/alert-list/alert-list.component.html
+++ b/www-ng/src/app/views/alert-list/alert-list.component.html
@@ -31,7 +31,7 @@
                 </a>
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Bus No." prop="bus_number">
+            <ngx-datatable-column name="Bus No." prop="vehicle_number">
               <ng-template let-value="value" ngx-datatable-cell-template>
                 {{value}}
               </ng-template>
@@ -43,7 +43,7 @@
             </ngx-datatable-column>
             <ngx-datatable-column name="Time" prop="alert_time">
               <ng-template let-value="value" ngx-datatable-cell-template>
-                {{value | toTime | date:'MM/dd/yyyy HH:mm:ss'}}
+                {{value | date:'MM/dd/yyyy HH:mm:ss'}}
               </ng-template>
             </ngx-datatable-column>
           </ngx-datatable>
