--- a/www-ng/src/app/views/alert-list/alert.component.html
+++ b/www-ng/src/app/views/alert-list/alert.component.html
@@ -110,7 +110,7 @@
                 </ngx-datatable-column>
                 <ngx-datatable-column name="Time" prop="date">
                   <ng-template let-value="value" ngx-datatable-cell-template>
-                    {{value | toTime | date:'MM/dd/yyyy HH:mm:ss'}}
+                    {{value | date:'MM/dd/yyyy HH:mm:ss'}}
                   </ng-template>
                 </ngx-datatable-column>
               </ngx-datatable>
@@ -137,7 +137,7 @@
                 </ngx-datatable-column>
                 <ngx-datatable-column name="Time" prop="date">
                   <ng-template let-value="value" ngx-datatable-cell-template>
-                    {{value | toTime | date:'MM/dd/yyyy HH:mm:ss'}}
+                    {{value | date:'MM/dd/yyyy HH:mm:ss'}}
                   </ng-template>
                 </ngx-datatable-column>
               </ngx-datatable>
