complete v0.1.8 data update

--- a/www-ng/src/app/views/data-log/routing.component.html
+++ b/www-ng/src/app/views/data-log/routing.component.html
@@ -44,7 +44,7 @@
                 {{value}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Bus No." prop="bus_number">
+            <ngx-datatable-column name="Bus No." prop="vehicle_number">
               <ng-template let-value="value" ngx-datatable-cell-template>
                 {{value}}
               </ng-template>
