--- a/www-ng/src/app/views/home/home.component.html
+++ b/www-ng/src/app/views/home/home.component.html
@@ -1,4 +1,4 @@
-<sk-circle [isRunning]="spinning" [delay]="300" [color]="red"></sk-circle>
+<sk-circle [isRunning]="spinning"></sk-circle>
 <div class="animated fadeIn">
   <div class="row">
     <div class="col">
