--- a/www-ng/src/app/views/alert-list/alert.component.html
+++ b/www-ng/src/app/views/alert-list/alert.component.html
@@ -15,7 +15,7 @@
     <div class="col-12 col-sm-5">
       <div class="card">
         <div class="card-header">
-          Bus No. {{ (alert$ | async)?.bus_number }}
+          Bus No. {{ (alert$ | async)?.vehicle_number }}
         </div>
         <div class="card-body">
           <agm-map *ngIf="locations$ | async; let loc"
