--- a/www-ng/src/app/views/data-log/maintenance.component.html
+++ b/www-ng/src/app/views/data-log/maintenance.component.html
@@ -43,7 +43,7 @@
       <div class="card">
         <div class="card-body">
          <ngx-datatable #tableMaintenance
-            class='material'
+            class="material"
             [columns]="colsMaintenance"
             [columnMode]="'force'"
             [headerHeight]="50"
