--- a/www-ng/src/app/views/pmn/pmn.component.html
+++ b/www-ng/src/app/views/pmn/pmn.component.html
@@ -4,39 +4,27 @@
       <i class="fa fa-exclamation-triangle fa-3x"></i>
     </div>
     <div class="col-8 col-sm-5 text-left">
-      <h2>{{ (dataPmn$ | async)?.prevent_notif_list[0].item }}</h2>
+      <h2>{{ (dataPmn$ | async)?.prevent_notif_list.item }}</h2>
     </div>
     <div class="col-12 col-sm-6 text-right">
-      <button type="submit" class="btn btn-primary"
-        (click)="primaryModal.show()">Reset</button>
+      <button type="submit" class="btn btn-primary" (click)="openModal(primaryModal)">Reset</button>
     </div>
   </div>
- <div class="row">
+  <div class="row">
     <div class="col">
       <div class="card">
         <div class="card-header">
           <div class="row">
             <div class="col-12 col-md-6 col-lg-3">
-              <input
-                type="text"
-                class="ioc-table-filter"
-                placeholder="Bus No ..."
-              />
+              <input type="text" class="ioc-table-filter" placeholder="Bus No ..." />
             </div>
           </div>
         </div>
         <div class="card-body">
-         <ngx-datatable
-            class='material'
-            [columnMode]="'force'"
-            [headerHeight]="50"
-            [footerHeight]="0"
-            [rowHeight]="'auto'"
-            [limit]="10"
+          <ngx-datatable class='material' [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0" [rowHeight]="'auto'" [limit]="10"
             [rows]='items$ | async'>
             <ngx-datatable-column name="Item" prop="item">
-              <ng-template let-row="row" let-col="column"
-                let-value="value" ngx-datatable-cell-template>
+              <ng-template let-row="row" let-col="column" let-value="value" ngx-datatable-cell-template>
                 {{value}}
               </ng-template>
             </ngx-datatable-column>
@@ -65,17 +53,11 @@
       </div>
     </div>
   </div>
- <div class="row">
-    <div class="col">
+  <div class="row">
+    <div class="col col-md-6">
       <div class="card">
         <div class="card-body">
-         <ngx-datatable
-            class='material'
-            [columnMode]="'force'"
-            [headerHeight]="50"
-            [footerHeight]="0"
-            [rowHeight]="'auto'"
-            [limit]="10"
+          <ngx-datatable class='material' [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0" [rowHeight]="'auto'" [limit]="10"
             [rows]='resets$ | async'>
             <ngx-datatable-column name="Reset Date" prop="notified_date">
               <ng-template let-value="value" ngx-datatable-cell-template>
@@ -91,16 +73,10 @@
         </div>
       </div>
     </div>
-    <div class="col">
+    <div class="col col-md-6">
       <div class="card">
         <div class="card-body">
-         <ngx-datatable
-            class='material'
-            [columnMode]="'force'"
-            [headerHeight]="50"
-            [footerHeight]="0"
-            [rowHeight]="'auto'"
-            [limit]="10"
+          <ngx-datatable class='material' [columnMode]="'force'" [headerHeight]="50" [footerHeight]="0" [rowHeight]="'auto'" [limit]="10"
             [rows]='notifications$ | async'>
             <ngx-datatable-column name="Time" prop="notified_date">
               <ng-template let-value="value" ngx-datatable-cell-template>
@@ -112,14 +88,27 @@
                 {{value}}
               </ng-template>
             </ngx-datatable-column>
-
           </ngx-datatable>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div bsModal #primaryModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<ng-template #primaryModal>
+  <div class="modal-header">
+    <h4 class="modal-title">Success</h4>
+    <button type="button" class="close" (click)="modalRef.hide()" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>Notification was reset!</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modalRef.hide()">Close</button>
+  </div>
+</ng-template>
+<!-- <div bsModal #primaryModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-primary" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -134,6 +123,6 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" (click)="primaryModal.hide()">Close</button>
         </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
+      </div>
+    </div>
+  </div> -->
