update decimal in pmn setting

--- a/www-ng/src/app/views/pmn-setting/pmn-setting.component.html
+++ b/www-ng/src/app/views/pmn-setting/pmn-setting.component.html
@@ -9,9 +9,9 @@
               <thead>
                 <tr>
                   <th>Item</th>
-                  <th>By Mileage   (mile)</th>
+                  <th>By Mileage</th>
                   <th>By Date</th>
-                  <th>By Hour(hr)</th>
+                  <th>By Hour</th>
                   <th>By Count</th>
                   <th>Operand</th>
                   <th>By Value</th>
@@ -31,7 +31,7 @@
                     </select>
                   </td>
                   <td><input type="text" size="5" formControlName="mileage_usage"></td>
-                  <td><input type="date" size="5" formControlName="date_usage" [ngModel]="date_usage" ></td>
+                  <td><input type="date" style="width: 140px" formControlName="date_usage" [ngModel]="date_usage" ></td>
                   <td><input type="text" size="5" formControlName="hours_usage"></td>
                   <td><input type="text" size="5" formControlName="usage_count"></td>
                   <td>
